Added my profile section, google auth working

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,9 @@
 server.port=8086
+
+spring.security.oauth2.client.registration.google.clientId=1046191293783-78h3lrj2ij1l8ghug0qqdd9md63rrua4.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.clientSecret=RTiQP3wcqrxtBpkGpzAwK7A2
+spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8086/login/oauth2/code/google
+
 ## PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
