--- a/pom.xml
+++ b/pom.xml
@@ -99,7 +99,11 @@
             <artifactId>jquery</artifactId>
             <version>2.1.3</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.github.ulisesbocchio</groupId>
+            <artifactId>jasypt-spring-boot</artifactId>
+            <version>2.1.1</version>
+        </dependency>
     </dependencies>
 
     <build>
